--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@jest/types": "^29.4.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.4.0",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/testing-library__jest-dom": "^5.14.5",
     "@vitejs/plugin-react": "^3.0.1",
     "babel-jest": "^29.4.1",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "lint-staged": "^13.1.0",
@@ -35,6 +40,7 @@
     "prettier": "^2.8.3",
     "simple-git-hooks": "^2.8.1",
     "taze": "^0.8.5",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
     "vite": "^4.0.4"
   },
